# graph-attention

./: .gitignore  ECG_conformer.py  README.md  pyproject.toml  setup_env.sh  train.py
configs/: config.yaml
configs/dataloader/: default.yaml
configs/dataset/: cifar10.yaml  cifar100.yaml  cifar100_strong.yaml  cifar10_noaug.yaml  imagenet.yaml
configs/experiment/: agf_test.yaml  attn_test.yaml  cifar100_large.yaml  cifar10_tiny.yaml  demo_agf_override.yaml  finetune_resnet.yaml  imagenet_finetune.yaml  pretrain_cifar10.yaml  quick_test.yaml
configs/model/: resnet.yaml  vit_agf_base.yaml  vit_agf_tiny.yaml  vit_base.yaml  vit_large.yaml  vit_small.yaml  vit_tiny.yaml
configs/model/layers/: agf.yaml  attention.yaml
configs/optimizer/: adamw.yaml  sgd.yaml
configs/scheduler/: cosine.yaml  cosine_warmup.yaml  onecycle.yaml  step.yaml
docs/: report.typ
graph_attention/: all.py  hooks.py
graph_attention/data/: __init__.py  cifar.py  imagenet.py  imagenette.py  moons.py  utils.py
graph_attention/data/vision/: __init__.py  imagenet.py  utils.py
graph_attention/models/: __init__.py  attn_resnet.py  backbone.py  eeg_encoder.py  moon_agf.py  simple_vit.py  transformer.py  vit.py
graph_attention/models/layers/: __init__.py  agf.py  (+4 more)
graph_attention/training/: __init__.py  hooks.py  losses.py  metrics.py  trainer.py  utils.py
graph_attention/visualization/: __init__.py  activation_collector.py  attention_pattern.py  params.py  utils.py
notebooks/: 01_vit.ipynb  02_resnet.ipynb  eeg.ipynb  resnet.ipynb
scripts/: download_bnci_data.sh  eeg.py  train_example.py  train_moons.py  train_vit.py
(+2 files in other folders)
