[project]
authors = [{name = "Slava Chaunin", email = "67190162+Ssslakter@users.noreply.github.com"}]
dependencies = ["einops>=0.8.1,<0.9", "trainer-tools @ https://github.com/ssslakter/trainer-tools.git", "black>=26.1.0,<27", "numpy<2.4"]
name = "graph-attention"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
graph_attention = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
